フッターの所属を変更

--- a/recommend/templates/recommend/base.html
+++ b/recommend/templates/recommend/base.html
@@ -85,7 +85,7 @@
             </li>
           </ul>
           <!-- /ナビゲーション -->
-        <div style="text-align:center">©2020年 | Studio_Xedge | パーソナライズ研究班</div>
+        <div style="text-align:center">©2020年 | パーソナライズ研究班</div>
       </div>
     </footer>
   </body>
