--- a/recommend/templates/recommend/home.html
+++ b/recommend/templates/recommend/home.html
@@ -17,7 +17,7 @@
 				<h1 class="display-4"><font color="orange">Xedge Recommender</font></h1>
 				<p class="lead"><font color="white">コンテンツを推薦するサイト</font></p>
 				<hr class="my-4">
-				<p class="lead" style="display: inline-block;"><font color="white">われわれはうちゅうじんだ</font></p><br>
+				<p class="lead" style="display: inline-block;"><font color="white">  </font></p><br>
 				<a class="btn btn-info btn-sd" href="" role="button">詳しくはこちら</a>
       </div>
 			<!-- コンテンツ01 -->
