--- a/recommend/templates/recommend/home.html
+++ b/recommend/templates/recommend/home.html
@@ -18,7 +18,7 @@
 				<p class="lead"><font color="white">コンテンツを推薦するサイト</font></p>
 				<hr class="my-4">
 				<p class="lead" style="display: inline-block;"><font color="white">  </font></p><br>
-				<a class="btn btn-info btn-sd" href="" role="button">詳細</a>
+				<a class="btn btn-info btn-sd" href="" role="button">詳しくはこちら</a>
       </div>
 			<!-- コンテンツ01 -->
 			<div class="py-4 mb-3 border">
